AcoMerge/Pyezsparkc/__init__.pxd

#define NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION
from libc.stdio cimport FILE
from libc cimport stdint
ctypedef stdint.uint64_t uint64_t
ctypedef stdint.uint8_t uint8_t


cdef extern from "../src/ezspark.h":
    ctypedef struct aco_fcl:
        pass
    ctypedef struct aco_fcl_kolmogorov_arnold:
        pass
    ctypedef struct aco_cl:
        pass
    ctypedef struct aco_pooling:
        pass
    ctypedef struct aco_lstm:
        pass
    ctypedef struct aco_sum:
        pass
    ctypedef struct aco_concatenation:
        pass
    ctypedef struct aco_activation:
        pass
    ctypedef struct aco_splitter:
        pass
    ctypedef struct aco_node:
        pass
    ctypedef struct BitArray:
        pass
    ctypedef struct aco_superstruct:
        pass
    ctypedef struct multithread_aco_superstruct:
        pass
    cdef enum:
        ALL_ACTIVATIONS
    cdef enum:
        NO_ACTIVATION
    cdef enum:
        SIGMOID
    cdef enum:
        TANH
    cdef enum:
        RELU
    cdef enum:
        ELU
    cdef enum:
        LEAKY_RELU
    cdef enum:
        GELU
    cdef enum:
        SOFTMAX
    cdef enum:
        N_ACTIVATION_FUNCTIONS_1_0
    cdef enum:
        MAX_POOLING
    cdef enum:
        AVERAGE_POOLING
    cdef enum:
        STORING
    cdef enum:
        USED_PARAMS
    cdef enum:
        ALL_PARAMS
    cdef enum:
        PHEROMONE_SCORES
    cdef enum:
        HEURISTICS
    cdef enum:
        PI
    cdef enum:
        EPSILON
    cdef enum:
        SUM_FLAG
    cdef enum:
        MUL_FLAG
    cdef enum:
        DIV_FLAG
    cdef enum:
        DIF_FLAG
    cdef enum:
        EXP_FLAG




     
cdef extern from "../src/aco_activation.h":
    aco_activation* init_aco_activation(int activation_flag, int activations_size, int input_size, int output_size,int identifier, uint64_t  output_array_offset,uint64_t  input_array_offset, uint64_t pheromone_activations_offset, float* output, float* input, float* pheromone_activations, int* activations)
    int* generate_all_activations()

cdef extern from "../src/aco_cl.h":
    aco_cl* init_aco_cl(int padding_rows, int padding_cols, int input_rows, int input_cols, int channels, int kernel_rows, int kernel_cols, int n_kernels, int identifier, int stride_rows, int stride_cols, uint64_t weights_array_offset, uint64_t  biases_array_offset,uint64_t  pheromone_weights_array_offset, uint64_t  pheromone_biases_array_offset, uint64_t  output_array_offset,uint64_t  input_array_offset, float* weights, float* biases, float* pheromone_weights, float* pheromone_biases, float* output, float* input)

cdef extern from "../src/aco_concatenation.h":
    aco_concatenation* init_aco_concatenation(int input_size, int output_size,float value,int identifier, uint64_t  output_array_offset,uint64_t  input_array_offset, uint64_t  input2_array_offset, float* output, float* input, float* input2)

cdef extern from "../src/aco_fcl.h":
    aco_fcl* init_aco_fcl(int input_size, int output_size, int identifier, uint64_t weights_array_offset, uint64_t  biases_array_offset,uint64_t  pheromone_weights_array_offset, uint64_t  pheromone_biases_array_offset, uint64_t  output_array_offset,uint64_t  input_array_offset, float* weights, float* biases, float* pheromone_weights, float* pheromone_biases, float* output, float* input)

cdef extern from "../src/aco_fcl_kolmogorov_arnold.h":
    aco_fcl_kolmogorov_arnold* init_aco_fcl_kolmogorov_arnold(int input_size, int output_size,int n_functions, int maximum_degree, int identifier, uint64_t weights_array_offset, uint64_t  ts_array_offset,uint64_t  pheromone_weights_array_offset, uint64_t  pheromone_ts_array_offset, uint64_t  output_array_offset,uint64_t  input_array_offset, float* weights, float* ts, float* pheromone_weights, float* pheromone_ts, float* output, float* input)

cdef extern from "../src/aco_lstm.h":
    aco_lstm* init_aco_lstm(int timestamp, int input_size, int output_size, int window, int identifier, uint64_t weights_array_offset, uint64_t  biases_array_offset,uint64_t  pheromone_weights_array_offset, uint64_t  pheromone_biases_array_offset, uint64_t  output_array_offset,uint64_t  input_array_offset,uint64_t  input_h_array_offset,uint64_t  input_k_array_offset,uint64_t  input_c_array_offset,uint64_t  output_h_array_offset,uint64_t  output_k_array_offset,uint64_t  output_c_array_offset,float* weights, float* biases, float* pheromone_weights, float* pheromone_biases, float* output, float* input, float* input_h, float* input_k, float* input_c, float* output_h, float* output_k, float* output_c)

cdef extern from "../src/aco_node.h":
    aco_node* init_aco_node(int n_input, int n_output, int identifier, aco_fcl* fcl, aco_cl* cl, aco_lstm* lstm,aco_sum* sum, aco_pooling* pooling, aco_concatenation* concatenation, aco_activation* activation, aco_fcl_kolmogorov_arnold* fcl_ka,aco_splitter* splitter,aco_node** input, aco_node** output)
    void print_aco_node_offsets(aco_node* f)

cdef extern from "../src/aco_pooling.h":
    aco_pooling* init_aco_pooling(int padding_rows, int padding_cols, int input_rows, int input_cols, int channels, int pooling_rows, int pooling_cols, int stride_rows, int stride_cols, int identifier, int pooling_type,uint64_t  output_array_offset, uint64_t  input_array_offset, float* input, float* output)

cdef extern from "../src/aco_sum.h":
    aco_sum* init_aco_sum(int input_size, int input2_size, int output_size,int identifier,int flag, uint64_t  output_array_offset,uint64_t  input_array_offset,uint64_t  input2_array_offset, float* output, float* input, float* input2)
cdef extern from "../src/aco_splitter.h":
    aco_splitter* init_aco_splitter(int input_size, int output_size,int identifier, uint64_t index_offset, uint64_t  output_array_offset,uint64_t  input_array_offset, float* output, float* input)
